<resources>
    <string name="app_name">My Portfolio</string>
    <string name="project_image">project image</string>

    <string name="hello_world">Hello World!</string>
    <string name="quote">Hello! Here is a quote for you. Programming isn\'t about what you know; it\'s about what you can figure out.</string>

    <string name="bmi_calculator">BMI Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="age">Age</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight_scale_image">weight scale image</string>

    <string name="convert_to_meters">Convert to Meters</string>
    <string name="ruler_image">ruler image</string>
</resources>